--- a/book.toml
+++ b/book.toml
@@ -1,9 +1,9 @@
 [book]
-authors = ["Jho00"]
-language = "en"
+authors = ["AlexOv", "DenisNe", "DenisRo"]
+language = "ru"
 multilingual = false
 src = "src"
-title = "system-engineering-playbook"
+title = "ai-systems-design"
 
 [build]
 build-dir = "book"
